# cliLogger

./: .gitignore  pyproject.toml
src/logsleuth/: __init__.py  models.py
tests/: test_model.py
